# The-Third-Eye

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  PROJECT_STATUS.md  TASKS.md  next.config.js  package-lock.json  package.json  supabase-schema.sql  tsconfig.json  tsconfig.tsbuildinfo
.next/: app-build-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  required-server-files.json  routes-manifest.json  trace
.next/cache/: .tsbuildinfo
.next/server/: app-paths-manifest.json  functions-config-manifest.json  middleware-build-manifest.js  server-reference-manifest.js
.next/server/app/: _not-found.rsc  privacy_policy.rsc
.next/server/chunks/: 570.js
.next/server/pages/: 404.html
.next/server/src/: middleware.js.map
.next/standalone/: server.js
.next/standalone/.next/: BUILD_ID  app-path-routes-manifest.json  prerender-manifest.js  (+1 more)
backend/: pyproject.toml
backend/alembic/: env.py
backend/app/: database.py  main.py
backend/app/agents/: __init__.py  executive.py  knowledge.py  orchestrator.py  productivity.py  registry.py  research.py
backend/app/api/: chat.py  documents.py  knowledge.py
backend/app/auth/: models.py  service.py
backend/app/knowledge/: chunker.py  embedder.py  ingestion.py  models.py  pipeline.py  retriever.py  schemas.py
backend/app/memory/: consolidation.py
backend/tests/: conftest.py  test_agents.py  test_knowledge.py  test_memory_consolidation.py
frontend/: .env.local.example  generate-icons.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/: manifest.json  sw.js
scripts/: setup-vercel-env.sh
src/: middleware.ts
src/app/: globals.css
src/hooks/: useLocalGoals.ts  useLocalKnowledge.ts  useLocalNotes.ts  useLocalTasks.ts  useVoice.ts
src/lib/: api.ts  auth.ts  supabase.ts  utils.ts
(+189 files in other folders)
