[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis-backend"
version = "0.1.0"
description = "JARVIS OS — FastAPI Backend"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",

    # Redis
    "redis>=5.0.4",

    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyotp>=2.9.0",
    "cryptography>=42.0.0",

    # AI Providers
    "google-generativeai>=0.7.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",

    # Embeddings & Vector
    "numpy>=1.26.0",
    "pgvector>=0.3.0",

    # Validation & Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",

    # HTTP client
    "httpx>=0.27.0",

    # Utilities
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "python-dateutil>=2.9.0",

    # Phase 2: document ingestion & knowledge base
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.2",
    "markdown-it-py>=3.0.0",
    "tiktoken>=0.7.0",

    # Phase 2: scheduling for memory consolidation
    "apscheduler>=3.10.4",
    "sqlalchemy-utils>=0.41.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=25.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py312"
